Fix styling for footer on small screen size

--- a/main-site/src/2022/styles/main.css
+++ b/main-site/src/2022/styles/main.css
@@ -10,7 +10,7 @@ body {
 
 a.simple-link {
     color: #e61b2e;
-    animation: text-blinking 500ms alternate infinite;
+    animation: text-blinking 500ms alternate infinite ease-in-out;
 }
 
 a.simple-link:hover, a.simple-link:focus {
@@ -59,11 +59,6 @@ main-font {
     font-weight: bold;
 }
 
-.full-view footer.flex.space-between {
-    display: flex;
-    justify-content: space-between;
-}
-
 @media(min-width: 20rem) {
     .main-heading {
         font-size: 1.3rem;
@@ -72,11 +67,18 @@ main-font {
 
     .secondary-heading {
         font-size: 1.1rem;
-        margin: 1rem 1.25rem;
+        margin: 1rem 1.25rem 0 1.25rem;
     }
 
-    .full-view footer.flex.space-between {
+    .full-view footer {
         padding: 0 1rem 2rem 1rem;
+        diplay: block;
+    }
+
+    .full-view footer section.social-media {
+        border-bottom: white 1px solid;
+        padding-bottom: 1rem;
+        margin-bottom: 1rem;
     }
 
     .social-group.flex {
@@ -85,6 +87,20 @@ main-font {
 
     .social-group.flex .flex-item {
         margin-right: 0.5rem;
+    }
+}
+
+@media(min-width: 31.25rem) {
+    .full-view footer {
+        display: flex;
+        justify-content: space-between;
+        padding: 0 2rem 3rem 2rem;
+    }
+
+    .full-view footer section.social-media {
+        border-bottom: none;
+        padding-bottom: 0;
+        margin-bottom: 0;
     }
 }
 
@@ -100,7 +116,7 @@ main-font {
         margin: 0.25rem 1.25rem;
     }
 
-    .full-view footer.flex.space-between {
+    .full-view footer {
         padding: 0 2rem 3rem 2rem;
     }
 
@@ -124,7 +140,7 @@ main-font {
         margin: 0.25rem 1.25rem;
     }
 
-    .full-view footer.flex.space-between {
+    .full-view footer {
         padding: 0 3rem 4rem 3rem;
     }
 
@@ -157,7 +173,7 @@ main-font {
         margin: 0.25rem 1.25rem;
     }
 
-    .full-view footer.flex.space-between {
+    .full-view footer {
         padding: 0 6rem 6rem 6rem;
     }
 
